highpass the visualiser and fix some flickering

--- a/css/player.css
+++ b/css/player.css
@@ -1,6 +1,6 @@
 #analyser-container {
 	display: flex;
-	overflow: visible;
+	overflow: hidden;
 }
 
 .analyser-bar {
